# iOSAppWithC-Lib

./: README.md
AccessSameClass/: sampel_readme.md
AccessSameClass/SampleApp/SampleApp/: AccessMathLib.mm  ViewController.h  ViewController.m
AccessSameClass/SampleApp/SampleApp.xcodeproj/: project.pbxproj
AccessSameClass/math-lib/: CMakeLists.txt  main.cpp
AccessSameClass/math-lib/lib/math/: Operations.cpp  Operations.hpp
CMakeR&D/: CMakeLists.txt  CmakeReadMe.md  main.cpp
CMakeR&D/lib/: CMakeCache.txt  cmake_install.cmake
CMakeR&D/lib/math/: operations.cpp  operations.hpp
CreateDynamicLib/SampleApp/SampleApp/: AccessMathLib.h  AccessMathLib.mm  SceneDelegate.h  main.m
CreateDynamicLib/SampleApp/SampleApp.xcodeproj/: project.pbxproj
CreateDynamicLib/SampleApp/SampleApp.xcodeproj/xcshareddata/xcschemes/: SampleApp.xcscheme
CreateDynamicLib/SampleApp/SampleApp/Base.lproj/: Main.storyboard
CreateDynamicLib/example-lib/: CMakeLists.txt  HelloWorld.cpp
CreateDynamicLib/example-lib/prefix/include/: HelloWorld.hpp
CreateDynamicLib/example-lib/prefix/lib/: libhello.dylib
CreateDynamicLib/math-lib/: CMakeLists.txt  createioslib.md
CreateDynamicLib/math-lib/lib/math/: Operations.cpp  Operations.hpp
CreateDynamicLib/math-lib/prefix/lib/: libmath.dylib
Obejctive-C/SampleApp/SampleApp/: AppDelegate.h  ViewController.m
Obejctive-C/SampleApp/SampleApp.xcodeproj/: project.pbxproj
Obejctive-C/SampleApp/SampleApp/Base.lproj/: Main.storyboard
Obejctive-C/SampleApp/SampleApp/lib-files/include/: Operations.hpp
Obejctive-C/example-lib/: CMakeLists.txt
Obejctive-C/math-lib/: CMakeLists.txt  createioslib.md  main.cpp
Obejctive-C/math-lib/lib/math/: Operations.cpp  OperationsIOS.h  OperationsIOS.mm
SameLibFromTwoServices/: sampel_readme.md
SameLibFromTwoServices/RootStaticLib/RootStaticLib/: RootStaticLib.m
SameLibFromTwoServices/RootStaticLib/RootStaticLib.xcodeproj/: project.pbxproj
SameLibFromTwoServices/RootStaticLib/RootStaticLib/Services/ServiceGen1/ServiceGen1/: ServiceGen1.h  ServiceGen1.mm
SameLibFromTwoServices/RootStaticLib/RootStaticLib/Services/ServiceGen1/ServiceGen1.xcodeproj/: project.pbxproj
SameLibFromTwoServices/RootStaticLib/RootStaticLib/Services/ServiceGen1/ServiceGen1/lib-files/include/: Operations.hpp
SameLibFromTwoServices/RootStaticLib/RootStaticLib/Services/ServiceGen2/ServiceGen2/: ServiceGen2.h  ServiceGen2.mm
SameLibFromTwoServices/RootStaticLib/RootStaticLib/Services/ServiceGen2/ServiceGen2.xcodeproj/: project.pbxproj
SameLibFromTwoServices/RootStaticLib/RootStaticLib/Services/ServiceGen2/ServiceGen2/lib-files/include/: Operations.hpp
SameLibFromTwoServices/SampleApp/SampleApp/: AppDelegate.m  SceneDelegate.m  ViewController.m
SameLibFromTwoServices/SampleApp/SampleApp.xcodeproj/: project.pbxproj
SameLibFromTwoServices/SampleApp/SampleApp/lib-files/include/: RootStaticLib.h
SameLibFromTwoServices/math-lib/: CMakeLists.txt  main.cpp
SameLibFromTwoServices/math-lib/lib/math/: operations.cpp  operations.hpp
TomTomGuide/: TomTom_Package_README.md
WithoutXcodeCreateStaticLib/: create_static_without_xcode.md
WithoutXcodeCreateStaticLib/math-lib/: CMakeLists.txt
WithoutXcodeCreateStaticLib/math-lib/lib/math/: Operations.cpp  Operations.hpp
